--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,8 +1,14 @@
 body {
     text-align: center;
+    margin: 0px;
 }
 header{
     border-bottom: black 2px solid ;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(247, 228, 187);
+
 }
 #entry {
     display: grid;
@@ -33,10 +39,9 @@ header{
     padding-left: 50px;
     padding-right: 50px;
 }
-img{
-    /* height: 44px;
-    width: auto; */
-}
+/* img{
+  
+} */
 .login-register {
     font-size: 32px;
     margin: auto;
@@ -49,10 +54,13 @@ input[type='password'] {
 }
 
 #logout-button {
-    position: absolute;
+    /* position: absolute;
     right: 10px;
-    top: 10px;
+    top: 10px; */
+    padding: 10px;
     font-size: 24px;
+    border-radius: 16px;
+    border-color: aquamarine;
 }
 
 /* input */
