--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,66 +1,81 @@
 body {
-    text-align: center;
-    margin: 0px;
+  text-align: center;
+  margin: 0px;
 }
-header{
-    border-bottom: black 2px solid ;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: rgb(247, 228, 187);
 
+header {
+  border-bottom: black 2px solid;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgb(247, 228, 187);
 }
+
+#index-page {
+  display: grid;
+}
+
+#book-cover {
+  display: flex;
+  flex-wrap: wrap;
+  overflow: scroll;
+  justify-content: center;
+}
+#book-cover div {
+  border: black solid 1px;
+  margin: 10px;
+}
+#book-cover img {
+  height: 200px;
+}
+
 #entry {
-    display: grid;
-    border: black solid 2px;
-
-    margin: auto;
-
+  display: grid;
+  border: black solid 2px;
+  margin: auto;
 }
-
-
 
 .container {
-    max-width: 50%;
-    display: flex;
-    flex-direction: column;
-    min-height: 300px;
+  max-width: 50%;
+  display: flex;
+  flex-direction: column;
+  min-height: 300px;
 }
 
 .buttons {
-
-    margin: auto;
+  margin: auto;
 }
 
 .buttons button {
-    margin: auto;
-    margin: 10px;
-    padding: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
+  margin: auto;
+  margin: 10px;
+  padding: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
+
 /* img{
-  
+
 } */
 .login-register {
-    font-size: 32px;
-    margin: auto;
+  font-size: 32px;
+  margin: auto;
 }
 
-input[type='text'],
-input[type='password'] {
-    text-align: center;
-    font-size: 24px;
+input[type=text],
+input[type=password] {
+  text-align: center;
+  font-size: 24px;
 }
 
-#logout-button,#login-button {
-    /* position: absolute;
-    right: 10px;
-    top: 10px; */
-    padding: 10px;
-    font-size: 24px;
-    border-radius: 16px;
-    border-color: rgb(255, 165, 127);
+#logout-button, #login-button {
+  /* position: absolute;
+  right: 10px;
+  top: 10px; */
+  padding: 10px;
+  font-size: 24px;
+  border-radius: 16px;
+  border-color: rgb(255, 165, 127);
 }
 
 /* input */
@@ -114,4 +129,4 @@ input[type='password'] {
 
 .login-register {
     grid-area: login-register;
-} */
+} *//*# sourceMappingURL=style.css.map */
