Active user status functionality added can check if a user is logged in function to get active user will displa active user name in the header and logout button if user is logged in

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -10,6 +10,10 @@ header {
   align-items: center;
   background-color: rgb(247, 228, 187);
 }
+header #user-div {
+  display: flex;
+  flex-direction: row;
+}
 
 #index-page {
   display: grid;
