--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -5,9 +5,14 @@ body {
 header{
     border-bottom: black 2px solid ;
     display: flex;
+ 
     justify-content: space-evenly;
     align-items: center;
     background-color: rgb(247, 228, 187);
+    #user-div{
+        display: flex;
+        flex-direction: row;
+    }
 
 }
 
