same as previosu commit, from proper directory

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -19,6 +19,12 @@ header #user-div {
   display: grid;
 }
 
+#book-page {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border: 2px black solid;
+}
+
 #all-books {
   display: flex;
   flex-wrap: wrap;
