--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -15,7 +15,9 @@ header{
     }
 
 }
-
+.bp-button{
+    font-size: 24px;
+}
 #index-page{
    
     display: grid;
@@ -38,7 +40,7 @@ header{
     }
 
     img{
-        height: 200px;
+        height: 220px;
     }
 }
 
