profile page made will now render the profile-page when user clicks on their own user name will display a li of titles of books from their to_reads

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -49,6 +49,12 @@ header #user-div {
   margin: auto;
 }
 
+#reading-list {
+  align-self: center;
+  margin: auto;
+  text-align: left;
+}
+
 .container {
   max-width: 50%;
   display: flex;
