--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -52,7 +52,11 @@ header{
     margin: auto;
 
 }
-
+#reading-list{
+    align-self: center;
+    margin: auto;
+    text-align: left;
+}
 
 
 .container {
