--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -43,7 +43,10 @@ header{
         height: 220px;
     }
 }
-
+#profile-page{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 #entry {
     display: grid;
@@ -53,7 +56,7 @@ header{
    
 
 }
-#reading-list{
+#reading-list,#rated-list{
     align-self: center;
     margin: auto;
     text-align: left;
