displaying user profile page with tables will display the users to-read and rated books in the form of a table will make a function for renderign tables with book array/objects as arguments

--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -22,10 +22,20 @@ header{
    
     display: grid;
 }
+
+td{
+    text-align: start;
+    border: 1px black solid;
+}
 #book-page{
     display: grid; 
    grid-template-columns: 1fr 1fr;
     border: 2px black solid;
+    padding: 10px;
+
+    #book-right{
+        text-align: left;
+    }
 }
 #all-books{
     
