--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -23,10 +23,19 @@ header #user-div {
   display: grid;
 }
 
+td {
+  text-align: start;
+  border: 1px black solid;
+}
+
 #book-page {
   display: grid;
   grid-template-columns: 1fr 1fr;
   border: 2px black solid;
+  padding: 10px;
+}
+#book-page #book-right {
+  text-align: left;
 }
 
 #all-books {
