rating added to rating list, tables now aligned

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -55,6 +55,7 @@ td {
 #profile-page {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: start;
 }
 
 #entry {
@@ -64,9 +65,7 @@ td {
 }
 
 #reading-list, #rated-list {
-  align-self: center;
-  margin: auto;
-  text-align: left;
+  background-color: beige;
 }
 
 .container {
