added book page styling for mobile view

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -175,4 +175,7 @@ input[type=password] {
     display: grid;
     justify-content: center;
   }
+  #book-cover img {
+    max-width: 90%;
+  }
 }/*# sourceMappingURL=style.css.map */
