--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
   margin: 0px;
+  height: 100vh;
 }
 
 header {
@@ -41,7 +42,6 @@ td {
 #all-books {
   display: flex;
   flex-wrap: wrap;
-  overflow: scroll;
   justify-content: center;
 }
 #all-books div {
@@ -49,7 +49,7 @@ td {
   margin: 10px;
 }
 #all-books img {
-  height: 220px;
+  height: 240px;
 }
 
 #profile-page {
