--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -122,6 +122,31 @@ input[type='password'] {
     border-color: rgb(255, 165, 127);
 }
 
+
+
+#rated-list-title{
+    button{
+background-color:rgba(0, 255, 255, 0.003);
+border-width: 0 0 1px 0;
+    }
+}
+table{
+    
+        thead{
+        border: black solid 2px;
+        //  border-color: black;
+        //  border-width: 10px 0px 13px 0px;
+        //  border-style: solid;
+         background-color: aquamarine;
+         padding: 10px;
+         margin: 10px;
+         th:hover{
+            cursor:pointer
+         }
+     }
+
+}
+
 /* input */
 /* .container {
     min-height: 300px;
