--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -2,7 +2,8 @@ body {
     text-align: center;
     margin: 0px;
     height:100vh;
-    // background-color: rgb(75, 64, 64);
+     background-color: rgb(42, 42, 42);
+     color: white;
 }
 header{
     border-bottom: black 2px solid ;
@@ -10,7 +11,7 @@ header{
  
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgb(247, 228, 187);
+    // background-color: rgb(247, 228, 187);
     #user-div{
         display: flex;
         flex-direction: row;
@@ -26,18 +27,30 @@ header{
 }
 
 td{
+    
     text-align: start;
-    border: 1px black solid;
+    align-self:start;
+    justify-items: start;
+ 
+     border:  black solid;
+     border-width :0  1px 0 0;
 }
 #book-page{
     display: grid; 
    grid-template-columns: 1fr 1fr;
-    border: 2px black solid;
+    // border: 2px black solid;
     padding: 10px;
 
     #book-right{
         text-align: left;
     }
+}
+
+
+#bp-author{
+    color: rgb(177, 177, 177);
+    font-weight: bold;
+    font-size: 32;
 }
 #all-books{
     
@@ -46,7 +59,7 @@ td{
    
     justify-content: center;
     div{
-        border: black solid 1px;
+        // border: black solid 1px;
         margin: 10px;
 
     }
@@ -75,7 +88,7 @@ td{
 #reading-list,#rated-list{
     
     // text-align: left;
-    background-color: rgba(246, 148, 0, 0.234);
+    // background-color: rgba(246, 245, 245, 0.234);
 }
 
 
@@ -137,7 +150,7 @@ table{
         //  border-color: black;
         //  border-width: 10px 0px 13px 0px;
         //  border-style: solid;
-         background-color: aquamarine;
+         
          padding: 10px;
          margin: 10px;
          th:hover{
