--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -2,16 +2,8 @@ body {
   text-align: center;
   margin: 0px;
   height: 100vh;
- 
-}
-
-.dark{
   background-color: rgb(42, 42, 42);
   color: white;
-}
-.light{
-  color: black;
-  background-color: aliceblue;
 }
 
 header {
@@ -50,6 +42,15 @@ td {
   text-align: left;
 }
 
+.dark {
+  background-color: rgb(42, 42, 42);
+  color: white;
+}
+
+.light {
+  color: black;
+  background-color: aliceblue;
+}
 #bp-author {
   color: rgb(177, 177, 177);
   font-weight: bold;
