function for removing book from reading declared render book function modified

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -82,6 +82,10 @@ td {
   margin: auto;
 }
 
+#reading-list, #rated-list {
+  padding: 30px;
+}
+
 .container {
   max-width: 50%;
   display: flex;
