--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -58,7 +58,7 @@ td{
 
         div{
             p{
-                
+
             }
         }
     }
@@ -103,7 +103,7 @@ td{
 
 }
 #reading-list,#rated-list{
-    
+    padding: 30px;
     // text-align: left;
     // background-color: rgba(246, 245, 245, 0.234);
 }
