--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -51,6 +51,12 @@ td {
   color: black;
   background-color: aliceblue;
 }
+.remove-button {
+  background-color: rgb(163, 1, 1);
+  color: white;
+  border-radius: 2rem;
+}
+
 #bp-author {
   color: rgb(177, 177, 177);
   font-weight: bold;
@@ -60,10 +66,10 @@ td {
 #all-books {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
 }
 #all-books div {
-  margin: 10px;
+  margin: 1rem;
 }
 #all-books img {
   height: 240px;
