--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -64,6 +64,12 @@ td{
     }
 }
 
+.remove-button{
+    background-color: rgb(163, 1, 1);
+    color: white;
+    border-radius: 2rem;
+}
+
 #bp-author{
     color: rgb(177, 177, 177);
     font-weight: bold;
@@ -74,11 +80,12 @@ td{
     display: flex;
     flex-wrap: wrap;
    
-    justify-content: center;
+    justify-content: flex-start;
+
     div{
         // border: black solid 1px;
-        margin: 10px;
-
+        margin: 1rem;
+       
     }
 
     img{
@@ -91,6 +98,8 @@ td{
     align-items: start;
     gap: 20px;
 }
+
+
 
 
 
