--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -26,15 +26,7 @@ header{
     display: grid;
 }
 
-td{
-    
-    text-align: start;
-    align-self:start;
-    justify-items: start;
- 
-     border:  black solid;
-     border-width :0  1px 0 0;
-}
+
 #book-page{
     display: grid; 
    grid-template-columns: 1fr 1fr;
@@ -176,13 +168,25 @@ table{
         //  border-color: black;
         //  border-width: 10px 0px 13px 0px;
         //  border-style: solid;
-         
+         th{
+            border: black 1px solid;
+            padding: 0.5rem;
+            
+         }
          padding: 10px;
          margin: 10px;
          th:hover{
             cursor:pointer
          }
      }
+     td{
+    
+        text-align: start;
+        justify-items: start;
+        padding:5px;
+        border:  black solid;
+        border-width :0  1px 0 0;
+    }
 
 }
 
