--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -281,31 +281,31 @@ table {
   line-height: 1;
 
   &:hover {
-    input{
-        &:checked{
-            ~{
-                label{
-                    &:before{
-                        opacity: 0.1;
-                    }
-                }
+    input {
+      &:checked {
+        ~ {
+          label {
+            &:before {
+              opacity: 0.1;
             }
+          }
         }
+      }
     }
   }
   &:hover {
-    >input {
-        &:checked {
-            ~ {
-                label {
-                    &:before {
-                        opacity: 0.4;
-                    }
-                }
+    > input {
+      &:checked {
+        ~ {
+          label {
+            &:before {
+              opacity: 0.4;
             }
+          }
         }
+      }
     }
-}
+  }
 
   input {
     display: none;
@@ -350,6 +350,46 @@ table {
   }
 }
 // label::before{
+
+//_______________________________________________________
+
+//------------------ css for rated stars------------------
+
+.rating2 {
+  display: flex;
+  //   span {
+  //     font-size: 24px;
+  //   }
+
+  #bp-score {
+    align-self: center;
+    font-size: 32px;
+    margin-bottom: -5px;
+  }
+}
+.rating-stars {
+  position: relative;
+  font-size: 2.5rem;
+  display: inline-block;
+
+  .rating-stars-wrapper {
+    display: inline-block;
+    position: relative;
+  }
+
+  .rating-stars-empty {
+    color: #ccc;
+  }
+
+  .rating-stars-filled {
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    color: gold;
+  }
+}
 
 //   }
 
